# cpp-dp-2022-10-05

./: README.md
Behavioral/Command.Exercise/: CMakeLists.txt
Behavioral/Command.Exercise/gtests/: CMakeLists.txt  document_tests.cpp
Behavioral/Command.Exercise/src/: CMakeLists.txt  application.hpp  document.hpp
Behavioral/Mediator.TheoryCode/: CMakeLists.txt
Behavioral/State.Example/: CMakeLists.txt
Behavioral/State.Example/tests/: CMakeLists.txt
Behavioral/State.Exercise/src/: CMakeLists.txt
Behavioral/Strategy.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Visitor.Exercise/: CMakeLists.txt
Behavioral/Visitor.Exercise/tests/: CMakeLists.txt
Creational/AbstractFactory.Example/: CMakeLists.txt  monsters.hpp
Creational/AbstractFactory.Exercise/: before.cpp
Creational/Builder.Example/: data_parser.hpp  main.cpp  report_builder.cpp
Creational/Builder.Example.SP/: CMakeLists.txt  data_parser.hpp  main.cpp
Creational/FactoryMethod.Example/: CMakeLists.txt  generic_factory.hpp  main.cpp  rectangle.hpp
Creational/FactoryMethod.Exercise1/: before.cpp  employee.cpp  employee.hpp
Creational/FactoryMethod.Exercise2/: circle.cpp  circle.hpp
Creational/FactoryMethod.TheoryCode/: factory.hpp  main.cpp
Creational/Prototype.Exercise/: circle.cpp  circle.hpp  generic_factory.hpp  main.cpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  shape_factories.hpp  square.cpp  square.hpp
Creational/Prototype.Intro/: main.cpp
Creational/Singleton.Example/: devices.hpp  main.cpp  meyers_singleton.hpp  multithreading_singleton.hpp  phoenix_singleton.hpp  simple_singleton.hpp  singleton_holder.hpp
Creational/Singleton.TheoryCode/: CMakeLists.txt
Experimental/PolymorphicWrappers/: polymorphic_wrappers.cpp
Experimental/PolymorphicWrappers.Folly/: polymorphic_wrappers.cpp
Structural/Adapter.Exercise/: CMakeLists.txt
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp
Structural/Composite.Exercise/: generic_factory.hpp  main.cpp  paragraph.hpp  shape_group.cpp
Structural/Composite.Exercise/shape_readers_writers/: shape_group_reader_writer.cpp  square_reader_writer.hpp
Structural/Decorator.Example/: main.cpp  paragraph.hpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: main.cpp
Structural/Flyweight.Boost/: main.cpp
Structural/Proxy.TheoryCode/: CMakeLists.txt  proxy.hpp
